[gd_scene load_steps=5 format=2]

[ext_resource path="res://Data/Scenes/PlayerColumn.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://PlayerTheme.tres" type="Theme" id=3]
[ext_resource path="res://Data/Fonts/Resources/InfoFont.tres" type="DynamicFont" id=4]

[node name="PlayerColumn" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
theme = ExtResource( 3 )
custom_constants/separation = 0
script = ExtResource( 1 )

[node name="Header" type="Control" parent="."]
margin_right = 600.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Header"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="Header/HBoxContainer"]
margin_right = 197.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Header/HBoxContainer"]
margin_left = 201.0
margin_right = 398.0
margin_bottom = 100.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 7

[node name="TopMargin" type="Control" parent="Header/HBoxContainer/VBoxContainer"]
margin_right = 197.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )

[node name="PlayerIcon" type="TextureRect" parent="Header/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 19.0
margin_right = 197.0
margin_bottom = 59.0
rect_min_size = Vector2( 0, 40 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="TopMargin2" type="Control" parent="Header/HBoxContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 197.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 5 )

[node name="PlayerName" type="Label" parent="Header/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 72.0
margin_right = 197.0
margin_bottom = 92.0
text = "nn"
align = 1
valign = 1

[node name="Control2" type="Control" parent="Header/HBoxContainer"]
margin_left = 402.0
margin_right = 600.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="Ones" type="Button" parent="."]
unique_name_in_owner = true
margin_top = 100.0
margin_right = 600.0
margin_bottom = 127.0
rect_min_size = Vector2( 0, 27 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
toggle_mode = true
shortcut_in_tooltip = false

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 127.0
margin_right = 600.0
margin_bottom = 131.0
size_flags_horizontal = 3

[node name="Twos" type="Button" parent="."]
unique_name_in_owner = true
margin_top = 131.0
margin_right = 600.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 27 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
toggle_mode = true
shortcut_in_tooltip = false

[node name="HSeparator2" type="HSeparator" parent="."]
margin_top = 158.0
margin_right = 600.0
margin_bottom = 162.0
size_flags_horizontal = 3

[node name="Threes" type="Button" parent="."]
unique_name_in_owner = true
margin_top = 162.0
margin_right = 600.0
margin_bottom = 189.0
rect_min_size = Vector2( 0, 27 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
toggle_mode = true
shortcut_in_tooltip = false

[node name="HSeparator3" type="HSeparator" parent="."]
margin_top = 189.0
margin_right = 600.0
margin_bottom = 193.0
size_flags_horizontal = 3

[node name="Fours" type="Button" parent="."]
unique_name_in_owner = true
margin_top = 193.0
margin_right = 600.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 27 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
toggle_mode = true
shortcut_in_tooltip = false

[node name="HSeparator4" type="HSeparator" parent="."]
margin_top = 220.0
margin_right = 600.0
margin_bottom = 224.0
size_flags_horizontal = 3

[node name="Fives" type="Button" parent="."]
unique_name_in_owner = true
margin_top = 224.0
margin_right = 600.0
margin_bottom = 251.0
rect_min_size = Vector2( 0, 27 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
toggle_mode = true
shortcut_in_tooltip = false

[node name="HSeparator5" type="HSeparator" parent="."]
margin_top = 251.0
margin_right = 600.0
margin_bottom = 255.0
size_flags_horizontal = 3

[node name="Sixes" type="Button" parent="."]
unique_name_in_owner = true
margin_top = 255.0
margin_right = 600.0
margin_bottom = 282.0
rect_min_size = Vector2( 0, 27 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
toggle_mode = true
shortcut_in_tooltip = false

[node name="HSeparator6" type="HSeparator" parent="."]
margin_top = 282.0
margin_right = 600.0
margin_bottom = 286.0
size_flags_horizontal = 3

[node name="Bonus" type="Label" parent="."]
unique_name_in_owner = true
margin_top = 286.0
margin_right = 600.0
margin_bottom = 313.0
rect_min_size = Vector2( 0, 27 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "34 (29 left)"
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="Bonus"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
max_value = 63.0
step = 1.0
value = 1.0
percent_visible = false

[node name="HSeparator7" type="HSeparator" parent="."]
margin_top = 313.0
margin_right = 600.0
margin_bottom = 317.0
size_flags_horizontal = 3

[node name="3OfAKind" type="Button" parent="."]
unique_name_in_owner = true
margin_top = 317.0
margin_right = 600.0
margin_bottom = 344.0
rect_min_size = Vector2( 0, 27 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
toggle_mode = true
shortcut_in_tooltip = false

[node name="HSeparator8" type="HSeparator" parent="."]
margin_top = 344.0
margin_right = 600.0
margin_bottom = 348.0
size_flags_horizontal = 3

[node name="4OfAKind" type="Button" parent="."]
unique_name_in_owner = true
margin_top = 348.0
margin_right = 600.0
margin_bottom = 375.0
rect_min_size = Vector2( 0, 27 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
toggle_mode = true
shortcut_in_tooltip = false

[node name="HSeparator9" type="HSeparator" parent="."]
margin_top = 375.0
margin_right = 600.0
margin_bottom = 379.0
size_flags_horizontal = 3

[node name="FullHouse" type="Button" parent="."]
unique_name_in_owner = true
margin_top = 379.0
margin_right = 600.0
margin_bottom = 406.0
rect_min_size = Vector2( 0, 27 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
toggle_mode = true
shortcut_in_tooltip = false

[node name="HSeparator10" type="HSeparator" parent="."]
margin_top = 406.0
margin_right = 600.0
margin_bottom = 410.0
size_flags_horizontal = 3

[node name="SMStraight" type="Button" parent="."]
unique_name_in_owner = true
margin_top = 410.0
margin_right = 600.0
margin_bottom = 437.0
rect_min_size = Vector2( 0, 27 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
toggle_mode = true
shortcut_in_tooltip = false

[node name="HSeparator11" type="HSeparator" parent="."]
margin_top = 437.0
margin_right = 600.0
margin_bottom = 441.0
size_flags_horizontal = 3

[node name="LGStraight" type="Button" parent="."]
unique_name_in_owner = true
margin_top = 441.0
margin_right = 600.0
margin_bottom = 468.0
rect_min_size = Vector2( 0, 27 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
toggle_mode = true
shortcut_in_tooltip = false

[node name="HSeparator12" type="HSeparator" parent="."]
margin_top = 468.0
margin_right = 600.0
margin_bottom = 472.0
size_flags_horizontal = 3

[node name="Yahtzee" type="Button" parent="."]
unique_name_in_owner = true
margin_top = 472.0
margin_right = 600.0
margin_bottom = 499.0
rect_min_size = Vector2( 0, 27 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
toggle_mode = true
shortcut_in_tooltip = false

[node name="HSeparator13" type="HSeparator" parent="."]
margin_top = 499.0
margin_right = 600.0
margin_bottom = 503.0
size_flags_horizontal = 3

[node name="Chance" type="Button" parent="."]
unique_name_in_owner = true
margin_top = 503.0
margin_right = 600.0
margin_bottom = 530.0
rect_min_size = Vector2( 0, 27 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
toggle_mode = true
shortcut_in_tooltip = false

[node name="HSeparator14" type="HSeparator" parent="."]
margin_top = 530.0
margin_right = 600.0
margin_bottom = 534.0
size_flags_horizontal = 3

[node name="Total" type="Label" parent="."]
unique_name_in_owner = true
margin_top = 534.0
margin_right = 600.0
margin_bottom = 561.0
rect_min_size = Vector2( 0, 27 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
align = 1
valign = 1

[node name="HSeparator15" type="HSeparator" parent="."]
margin_top = 561.0
margin_right = 600.0
margin_bottom = 565.0
size_flags_horizontal = 3

[node name="BottomMargin" type="Control" parent="."]
margin_top = 565.0
margin_right = 600.0
margin_bottom = 575.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 3
